Add magic trio of nginx configs to make sse work

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,22 +4,21 @@ services:
  web:
    restart: always
    build: ./web
-   #expose:
-   #  - "8000"
-   ports:
-    - "8000:8000"
+   expose:
+     - "8000"
    volumes:
      - ./web:/colab
    depends_on:
      - redis
 
-# nginx:
-#   restart: always
-#   build: ./nginx
-#   ports:
-#     - "80:80"
-#   depends_on:
-#     - web
+ nginx:
+   restart: always
+   build: ./nginx
+   ports:
+     - "80:80"
+   depends_on:
+     - web
+
  redis:
    restart: always
    image: redis
