--- a/nginx/colab.conf
+++ b/nginx/colab.conf
@@ -9,6 +9,13 @@ server {
    location / {
        proxy_pass http://web:8000/;
        # For socket: proxy_pass http://unix:/tmp/backend.socket:/
+       proxy_buffering off;
+       proxy_cache off;
+
+       # Magic trio for Event source: https://stackoverflow.com/questions/13672743/eventsource-server-sent-events-through-nginx
+       proxy_set_header Connection '';
+       proxy_http_version 1.1;
+       chunked_transfer_encoding off;
 
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
