--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,3 +22,29 @@ services:
  redis:
    restart: always
    image: redis
+
+ kafka1:
+   image: wurstmeister/kafka
+   depends_on:
+     - zoo1
+   ports:
+     - "9092:9092"
+   environment:
+     KAFKA_LOG_DIRS: /kafka
+     KAFKA_BROKER_ID: 1
+     # KAFKA_CREATE_TOPICS: test-topic-1:1:2,test-topic-2:1:2,test-topic-3:1:2
+     KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
+     KAFKA_ADVERTISED_PORT: 9092
+     KAFKA_LOG_RETENTION_HOURS: "1"
+     KAFKA_LOG_RETENTION_BYTES: "10000000"
+     KAFKA_ZOOKEEPER_CONNECT: zoo1:2181
+
+ zoo1:
+    image: elevy/zookeeper:latest
+    environment:
+      MYID: 1
+      SERVERS: zoo1
+    ports:
+      - "2181:2181"
+      - "2888"
+      - "3888"
