Serve static files directly using nginx.

--- a/nginx/colab.conf
+++ b/nginx/colab.conf
@@ -24,4 +24,9 @@ server {
        # Define the maximum file size on file uploads
        client_max_body_size 5M;
    }
+
+   location ^~ /static/  {
+      include  /etc/nginx/mime.types;
+      root /colab/colab_server/;
+   }
 }
