--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,46 +1,44 @@
 version: '2'
 
 services:
- web:
-   restart: always
-   build: ./web
-   expose:
-     - "8000"
-   volumes:
-     - ./web:/colab
-   depends_on:
-     - kafka1
+  web:
+    restart: always
+    build: ./web
+    expose:
+      - "8000"
+    volumes:
+      - ./web:/colab
+    depends_on:
+      - kafka
 
- nginx:
-   restart: always
-   build: ./nginx
-   ports:
-     - "80:80"
-   depends_on:
-     - web
-
- kafka1:
-   image: wurstmeister/kafka
-   depends_on:
-     - zoo1
-   ports:
-     - "9092:9092"
-   environment:
-     KAFKA_LOG_DIRS: /kafka
-     KAFKA_BROKER_ID: 1
-     KAFKA_CREATE_TOPICS: test_avro_topic:1:1
-     KAFKA_ADVERTISED_HOST_NAME: 192.168.99.100
-     KAFKA_ADVERTISED_PORT: 9092
-     KAFKA_LOG_RETENTION_HOURS: "1"
-     KAFKA_LOG_RETENTION_BYTES: "10000000"
-     KAFKA_ZOOKEEPER_CONNECT: zoo1:2181
-
- zoo1:
-    image: elevy/zookeeper:latest
-    environment:
-      MYID: 1
-      SERVERS: zoo1
+  nginx:
+    restart: always
+    build: ./nginx
     ports:
-      - "2181:2181"
-      - "2888"
-      - "3888"
+      - "80:80"
+    depends_on:
+      - web
+
+  kafka:
+    image: ches/kafka:0.10.2.0
+    depends_on:
+      - zookeeper
+    environment:
+      # Use container hostname support of the default Compose network
+      ZOOKEEPER_IP: zookeeper
+    ports:
+      - '9092:9092'  # Kafka broker
+      - '7203:7203'  # JMX
+    volumes:
+      - kafka-data:/data
+      - kafka-logs:/logs
+
+  zookeeper:
+    image: zookeeper:3.4
+    restart: unless-stopped
+    ports:
+      - '2181:2181'
+
+volumes:
+  kafka-data:
+  kafka-logs:
