--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -16,6 +16,20 @@ RUN cd /tmp && \
 
 RUN apt-get -y install python3-cffi python3-dev
 
+WORKDIR /build
+
+ENV BUILD_PACKAGES "build-essential git curl zlib1g-dev python"
+RUN apt-get update -y
+RUN apt-get install $BUILD_PACKAGES -y
+RUN git clone https://github.com/edenhill/kafkacat.git
+RUN cd kafkacat && \
+    ./bootstrap.sh && \
+    make install && \
+    cd .. && rm -rf kafkacat
+RUN AUTO_ADDED_PACKAGES=`apt-mark showauto`
+RUN apt-get remove --purge -y $BUILD_PACKAGES $AUTO_ADDED_PACKAGES
+RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 #  Transfer code
 RUN mkdir /colab
 ADD . /colab
