re #31 set proxy_read_timeout to 24 hours in nginx config

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,8 @@ http {
    # Define the timeout value for keep-alive connections with the client
    keepalive_timeout  65;
 
+   proxy_read_timeout  24h;
+
    #gzip  on;
 
    include /etc/nginx/conf.d/*.conf;
